[package]
name = "substrait-validator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.9"
prost-types = "0.9"
thiserror = "1.0"
strum = "0.23"
strum_macros = "0.23"
regex = "1"
substrait-validator-derive = { path = "derive" }
itertools = "0.8"
once_cell = "1.9"

[build-dependencies]
prost-build = "0.9"
walkdir = "2"
