[package]
name = "substrait-extensions"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Generated Code Dependencies
indexmap = { version = "2.7.0", features = ["serde"] }
regress = "0.10.4"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_yaml = "0.9.34"
syn = "2.0"
typify = "0.5.0"