[package]
name = "substrait-validator-c"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
substrait-validator = { path = "../rs", version = "0.0.1", default-features = false }
libc = "0.2"
thiserror = "1.0"
