[package]
name = "substrait-validator-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost = "0.9"
prost-types = "0.9"
thiserror = "1.0"
strum = "0.23"
strum_macros = "0.23"
num-traits = "0.2"
num-derive = "0.3"
regex = "1"
substrait-validator-derive = { path = "../derive" }
itertools = "0.8"
once_cell = "1.9"
jsonschema = "0.15"
serde_json = "1"
yaml-rust = "0.4"
glob = "0.3"
url = "2.2"

[build-dependencies]
prost-build = "0.9"
walkdir = "2"
