[package]
name = "substrait-validator-derive"
description = "Procedural macros for substrait-validator"
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait"
readme = "README.md"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
heck = "0.4"
