[package]
name = "substrait-validator-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "substrait_validator"
crate-type = ["cdylib"]

[dependencies]
substrait-validator = { path = "../rs" }
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[build-dependencies]
prost-build = "0.9"
walkdir = "2"
dunce = "1"
