[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "substrait_validator_build"
backend-path = ["."]

[project]
name = "substrait-validator"
version = "0.0.1"
description = "Validator for Substrait query plans"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["substrait"]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "protobuf > 3.19.3",
    "click >= 8",
    "pyyaml >= 6",
    "pycurl >= 7",
    "certifi >= 2021.10.08"
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
]

[project.urls]
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait"

[project.scripts]
substrait-validator = "substrait_validator:cli"
