[package]
name = "substrait-validator"
description = "Substrait validator"
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait"
readme = "README.md"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost = "0.9"
prost-types = "0.9"
thiserror = "1.0"
strum = "0.23"
strum_macros = "0.23"
num-traits = "0.2"
num-derive = "0.3"
fancy-regex = "0.8"
substrait-validator-derive = { path = "../derive", version = "0.0.1" }
itertools = "0.8"
once_cell = "1.9"
jsonschema = { version = "0.15", default-features = false }
serde_json = "1"
yaml-rust = "0.4"
glob = "0.3"
url = "2.2"
curl = { version = "0.4", optional = true }
chrono = "0.4"

[build-dependencies]
prost-build = "0.9"
walkdir = "2"
