[package]
name = "test-runner"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
default-run = "runner"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "find_protoc"
path = "src/find_protoc.rs"

[dependencies]
substrait-validator = { path = "../rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
glob = "0.3"
prost-build = "0.9"
